others and secrets added
Added link to GifCities
Added documents to the other page
Added space secret

--- a/links.html
+++ b/links.html
@@ -43,6 +43,12 @@
 			</p>
 			<h2 class="aligncenter"> I am everywhen! </h2>
 			<h2 class="aligncenter"><img src="images/computer-surfing.gif" height="100"></h2>
+			<br><br><br>
+			<p class="aligncenter"> 
+				All gifs on this site are from <a href="https://www.gifcities.org" target="_blank">GifCities.org</a><br><br>
+				<img src="images/WindowsExperience.gif"><br>
+				<img src="images/WindowsXPSale.gif"><img src="images/WindowsXPSpanish.gif">
+			</p>
 		</div>
 	</body>
 </html>
