--- a/other.html
+++ b/other.html
@@ -5,7 +5,7 @@
 	</head>
 	<body style="background-image: url('images/space.gif')">
 		<div class="sidenavL">
-			<img src="images/saturn.gif" width="200">
+			<a href="space.html"><img src="images/saturn.gif" width="200"></a>
 		</div>
 		<div class="sidenavR">
 			<img src="images/saturn2.gif" width="200">
@@ -23,9 +23,13 @@
 			</table>
 		</div>
 		<br>
-		<div class="lowwidth" style="border:10px; border-style:outset; border-color:#ffff00; padding: 1em; background-color:white;"> 
-			<h2 class="aligncenter"><img src="images/construction.gif"></h2>
-			<p class="aligncenter">ʕ•́ᴥ•̀ʔっ</p>
+		<div class="lowwidth" style="border:10px; border-style:outset; border-color:#ffff00; padding: 1em; background-color:white;">
+			<h1 class="aligncenter"><img src="images/Documents.gif" width="150"></h1>
+			<h2 class="aligncenter">The Scooby-Doo 1 & 2 Merch Catalog</h2/>
+			<p class="aligncenter">
+				The <a href="https://docs.google.com/document/d/1urqPy3YLN4mnBJYlkbIlv7fWjW5pRj_U6q1UaoQvARg/edit?usp=sharing" target="_blank">Scooby-Doo 1 & 2 Merch Catalog</a> 
+				is a list of all merchandise I can find for the James Gunn Scooby-Doo movies. There's tons of WACKY things in there! Feel free to comment any additions.
+			</p>
 		</div>
 	</body>
 </html>
