--- a/other.html
+++ b/other.html
@@ -28,7 +28,7 @@
 			<h2 class="aligncenter">The Scooby-Doo 1 & 2 Merch Catalog</h2/>
 			<p class="aligncenter">
 				The <a href="https://docs.google.com/document/d/1urqPy3YLN4mnBJYlkbIlv7fWjW5pRj_U6q1UaoQvARg/edit?usp=sharing" target="_blank">Scooby-Doo 1 & 2 Merch Catalog</a> 
-				is a list of all merchandise I can find for the James Gunn Scooby-Doo movies. There's tons of WACKY things in there! Feel free to comment any additions.
+				is a list of all merchandise I can find for the James Gunn Scooby-Doo movies. There's tons of WACKY things in there! Please comment any additions.
 			</p>
 		</div>
 	</body>
