--- a/other.html
+++ b/other.html
@@ -5,7 +5,7 @@
 	</head>
 	<body style="background-image: url('images/space.gif')">
 		<div class="sidenavL">
-			<a href="space.html"><img src="images/saturn.gif" width="200"></a>
+			<img src="images/saturn.gif" width="200">
 		</div>
 		<div class="sidenavR">
 			<img src="images/saturn2.gif" width="200">
