--- a/images.html
+++ b/images.html
@@ -2,6 +2,7 @@
 	<head>
 		<title>TetrisKid's Images</title>
 		<link rel="stylesheet" href="styles.css">
+		<link rel="icon" type="image/x-icon" href="icons/image.ico">
 	</head>
 	<body style="background-image: url('images/space.gif')">
 		<div class="sidenavL">
@@ -25,17 +26,14 @@
 		<br>
 		<div class="lowwidth" style="border:10px; border-style:outset; border-color:#ffff00; padding: 1em; background-color:white;"> 
 			<h2 class="aligncenter"><img src="images/gallery2.gif"></h2>
-			<table class="aligncenter">
-				<tr>
-					<td><p class="aligncenter">Hip to the Javabean Fanart</p><br><img src="images/javabean.png" alt="Hip to the Javabean Fanart" width="256" height="256"></td>
-					<td><p class="aligncenter">Grimace Forum Profile Picture</p><br><img src="images/grimacekid.png" alt="grimacekid48" width="256" height="256"></td>
-					<td><p class="aligncenter" >Cloud Sword Pixel Art</p><br><img src="images/cloudsword.png" alt="Cloud's Sword" width="256" height="256"></td>
-				</tr>
-			</table>
+			<p class="aligncenter">
+				<img src="images/javabean.png" alt="Hip to the Javabean Fanart" width="256" height="256">
+				<a href="https://grimacefans.weebly.com/forums.html#!/@grimacekid48" target="_blank"><img src="images/grimacekid.png" alt="grimacekid48" width="256" height="256"></a>
+				<img src="images/cloudsword.png" alt="Cloud's Sword" width="256" height="256">
+			</p>
 			<br>
 			<h2 class="aligncenter">Memes</h2>
-			<p class="aligncenter">President Biden Watching Scooby Doo 2: Monsters Unleashed <img src="images/bidensd2.png" alt="President Biden Watching Scooby Doo 2" width="600" height="400"></p>
-			
+			<p class="aligncenter">President Biden Watching Scooby Doo 2: Monsters Unleashed <img src="images/bidensd2.png" alt="President Biden Watching Scooby Doo 2" width="500"></p>
 		</div>
 	</body>
 </html>
