--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 	<head>
 		<title>TetrisKid's Home Page</title>
 		<link rel="stylesheet" href="styles.css">
+		<link rel="icon" type="image/x-icon" href="icons/home.ico">
 	</head>
 	<body style="background-image: url('images/space.gif')">
 		<div class="sidenavL">
@@ -33,7 +34,6 @@
 				"Lemon Demon." Please enjoy this website and the rest of my content, I worked very hard on it!
 			</p>
 			<p class="aligncenter">
-				Please note that this site is designed for monitors over 1280 pixels in width.<br><br>
 				<img src="images/netscape.gif"><img src="images/internetexplorer.gif"><br><br>
 				<img src="images/mobile.gif"><img src="images/good-vibes.gif"><img src="images/scoobydoo.gif"><br><br>
 				<img src="images/usa.gif">
