--- a/links.html
+++ b/links.html
@@ -2,6 +2,7 @@
 	<head>
 		<title>TetrisKid's Links</title>
 		<link rel="stylesheet" href="styles.css">
+		<link rel="icon" type="image/x-icon" href="icons/links.ico">
 	</head>
 	<body style="background-image: url('images/space.gif')">
 		<div class="sidenavL">
@@ -40,10 +41,14 @@
 				<a href="https://gbatemp.net/members/tetriskid48.512539/" target="_blank">GBAtemp profile</a><br>
 				<a href="https://jstris.jezevec10.com/u/KidPix48" target="_blank">Jstris profile</a><br>
 				<a href="https://scratch.mit.edu/users/TetrisKid48/" target="_blank">Scratch profile</a><br>
+				<a href="https://grimacefans.weebly.com/forums.html#!/@grimacekid48" target="_blank">Grimace Forum profile</a><br>
 			</p>
 			<h2 class="aligncenter"> I am everywhen! </h2>
 			<h2 class="aligncenter"><img src="images/computer-surfing.gif" height="100"></h2>
 			<br><br><br>
+			<p class="aligncenter"> 
+				All favicons on this site are from <a href="https://win98icons.alexmeub.com" target="_blank">Windows 98 Icon Viewer</a>
+			</p>
 			<p class="aligncenter"> 
 				All gifs on this site are from <a href="https://www.gifcities.org" target="_blank">GifCities.org</a><br><br>
 				<img src="images/WindowsExperience.gif"><br>
