--- a/other.html
+++ b/other.html
@@ -2,6 +2,7 @@
 	<head>
 		<title>TetrisKid's Others</title>
 		<link rel="stylesheet" href="styles.css">
+		<link rel="icon" type="image/x-icon" href="icons/other.ico">
 	</head>
 	<body style="background-image: url('images/space.gif')">
 		<div class="sidenavL">
