Added blinkie zone

--- a/index.html
+++ b/index.html
@@ -35,8 +35,11 @@
 			</p>
 			<p class="aligncenter">
 				<img src="images/netscape.gif"><img src="images/internetexplorer.gif"><br><br>
-				<img src="images/mobile.gif"><img src="images/good-vibes.gif"><img src="images/scoobydoo.gif"><br><br>
-				<img src="images/usa.gif">
+				<img src="images/usa.gif"><br><br>
+				<img src="images/blinkiezone.gif"><br>
+				<img src="images/mobile.gif"><img src="images/good-vibes.gif"><img src="images/scoobydoo.gif">
+				<img src="images/blinkiemario.gif"><img src="images/jesusblinkie.gif"><img src="images/blinkiemyspace.gif">
+				<img src="images/blinkiepepsi.gif"><img src="images/spongebobsquarepants.gif"><img src="images/ethelsblinkie.gif">
 			</p>
 		</div>
 	</body>
