--- a/images.html
+++ b/images.html
@@ -33,7 +33,7 @@
 			</p>
 			<br>
 			<h2 class="aligncenter">Memes</h2>
-			<p class="aligncenter">President Biden Watching Scooby Doo 2: Monsters Unleashed <img src="images/bidensd2.png" alt="President Biden Watching Scooby Doo 2" width="500"></p>
+			<p class="aligncenter">President Biden Watching Scooby Doo 2: Monsters Unleashed <br><img src="images/bidensd2.png" alt="President Biden Watching Scooby Doo 2" width="500"></p>
 		</div>
 	</body>
 </html>
