Added the Christmas page
Added the Christmas page, new gifs, a holiday pages area in the "other" page, and a link to the Christmas page on the home page

--- a/index.html
+++ b/index.html
@@ -26,16 +26,21 @@
 		<br>
 		<div class="lowwidth" style="border:10px; border-style:outset; border-color:#ffff00; padding: 1em; background-color:white;"> 
 			<h2 class="aligncenter"><img src="images/welcome.gif"></h2>
-			<p class="aligncenter"> This is a website where you can find a lot of my stuff. I hope you enjoy!</p>
+			<p class="aligncenter"> This is a website where you can find a lot of my stuff.</p>
 			<h2 class="aligncenter">About Me</h2>
 			<p class="aligncenter">
-				I am just some guy who likes the internet and computers! I like games such as "Deus Ex" and "Crash Bandicoot: The Huge Adventure." I also 
+				I am THE TetrisKid, known for many things. I like games such as "Deus Ex" and "Crash Bandicoot: The Huge Adventure." I also 
 				like movies such as "Scooby-Doo (2002)" and "Scooby-Doo 2: Monsters Unleashed." I also like bands such as "They Might Be Giants" and
-				"Lemon Demon." Please enjoy this website and the rest of my content, I worked very hard on it!
-			</p>
-			<p class="aligncenter">
+				"Lemon Demon." Please explore the site! There might be easter eggs (there might not be also).<br><br>
 				<img src="images/netscape.gif"><img src="images/internetexplorer.gif"><br><br>
 				<img src="images/usa.gif"><br><br>
+			</p>
+			<p class="aligncenter">
+				Click on the Christmas Bells below to go to the Christmas page! 
+				It will be updated each year, along with other holiday themed pages in the future. <br> <br>
+				<a href="holiday/christmas/christmas.html"><img src="images/christmasbells.gif"></a>
+			</p>
+			<p class="aligncenter">
 				<img src="images/blinkiezone.gif"><br>
 				<img src="images/mobile.gif"><img src="images/good-vibes.gif"><img src="images/scoobydoo.gif">
 				<img src="images/blinkiemario.gif"><img src="images/jesusblinkie.gif"><img src="images/blinkiemyspace.gif">
