--- a/other.html
+++ b/other.html
@@ -26,11 +26,14 @@
 		<br>
 		<div class="lowwidth" style="border:10px; border-style:outset; border-color:#ffff00; padding: 1em; background-color:white;">
 			<h1 class="aligncenter"><img src="images/Documents.gif" width="150"></h1>
-			<h2 class="aligncenter">The Scooby-Doo 1 & 2 Merch Catalog</h2/>
+			<h2 class="aligncenter">The Scooby-Doo 1 & 2 Merch Catalog</h2>
 			<p class="aligncenter">
 				The <a href="https://docs.google.com/document/d/1urqPy3YLN4mnBJYlkbIlv7fWjW5pRj_U6q1UaoQvARg/edit?usp=sharing" target="_blank">Scooby-Doo 1 & 2 Merch Catalog</a> 
 				is a list of all merchandise I can find for the James Gunn Scooby-Doo movies. There's tons of WACKY things in there! Please comment any additions.
 			</p>
+			<br><br><br>
+			<h1 class="aligncenter"><img src="images/HOLIDAY_PAGES.gif" width="500"></h1>
+			<a href="holiday/christmas/christmas.html"><h2 class="aligncenter">The Christmas Page</h2></a>
 		</div>
 	</body>
 </html>
