--- a/holiday/christmas/christmas.html
+++ b/holiday/christmas/christmas.html
@@ -8,7 +8,7 @@
 			<img src="bellcorner.gif" width="200">
 		</div>
 		<div class="sidenavR">
-			<img src="Xmasbell.gif" width="200">
+			<img src="XmasBell.gif" width="200">
 		</div>
 		<div class="lowwidth" style="border:10px; border-style:outset; border-color:#ffff00; padding: 1em; background-color:purple;">
 			<h1 style="font-family:courier;" class="aligncenter"> TetrisKid's Christmas Page</h1>
@@ -25,7 +25,7 @@
 				<img src="big_christmas_tree.gif"><img src="christmaspalm.gif"><img src="christmastree.gif"><br><br><br>
 				<img src="lights.gif" width="700"><br><br>
 				<img src="ChristophersChristmas.gif" height="300"><img src="ChristopherChristmas2.gif" height="300"><img src="ChristopherChristmas3.gif" height="300"><br>
-				<img src="Christopherchristmas4.gif" height="300"><img src="RomeloChristmas2007.gif" height="300"><img src="TylerChristmas2007.gif" height="300"><br><br>
+				<img src="ChristopherChristmas4.gif" height="300"><img src="RomeloChristmas2007.gif" height="300"><img src="TylerChristmas2007.gif" height="300"><br><br>
 				<a href="../../index.html"><img src="back.gif"></a><br>
 			</p>
 		</div>
