--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		</div>
 		<br>
 		<div class="lowwidth" style="border:10px; border-style:outset; border-color:#ffff00; padding: 1em; background-color:white;"> 
-			<h2 class="aligncenter"><img src="images/welcome.gif"></h2>
+			<h2 class="aligncenter"><img src="images/welcome.gif" width="15%"></h2>
 			<p class="aligncenter"> This is a website where you can find a lot of my stuff.</p>
 			<h2 class="aligncenter">About Me</h2>
 			<p class="aligncenter">
@@ -36,9 +36,7 @@
 				<img src="images/usa.gif"><br><br>
 			</p>
 			<p class="aligncenter">
-				Click on the Christmas Bells below to go to the Christmas page! 
-				It will be updated each year, along with other holiday themed pages in the future. <br> <br>
-				<a href="holiday/christmas/christmas.html"><img src="images/christmasbells.gif"></a>
+				There is currently no featured holiday page. View the past holiday pages <a href="other.html#holiday_pages">here.</a>
 			</p>
 			<p class="aligncenter">
 				<img src="images/blinkiezone.gif"><br>
