--- a/images.html
+++ b/images.html
@@ -32,6 +32,11 @@
 				<img src="images/cloudsword.png" alt="Cloud's Sword" width="256" height="256">
 			</p>
 			<br>
+			<p class="aligncenter">
+				<img src="images/farm.png" alt="Farm (ASCII Art)" width="396" height="396"><br>
+				"Farm" ASCII Art (May 1st, 2022)
+			</p>
+			<br>
 			<h2 class="aligncenter">Memes</h2>
 			<p class="aligncenter">President Biden Watching Scooby Doo 2: Monsters Unleashed <br><img src="images/bidensd2.png" alt="President Biden Watching Scooby Doo 2" width="500"></p>
 		</div>
