--- a/other.html
+++ b/other.html
@@ -31,7 +31,12 @@
 				The <a href="https://docs.google.com/document/d/1urqPy3YLN4mnBJYlkbIlv7fWjW5pRj_U6q1UaoQvARg/edit?usp=sharing" target="_blank">Scooby-Doo 1 & 2 Merch Catalog</a> 
 				is a list of all merchandise I can find for the James Gunn Scooby-Doo movies. There's tons of WACKY things in there! Please comment any additions.
 			</p>
-			<br><br>
+			<h2 class="aligncenter"><a href="other/setup.html">My PC Setup!!!</a> Components and stuff!!!!</h2>
+			<p class="aligncenter">
+				<a href="other/setup.html">This page</a> 
+				shows all the stuff in my computer. So you can know what is in my computer.
+			</p>
+			<br><br><br>
 			<h1 class="aligncenter"><img id="holiday_pages" src="images/HOLIDAY_PAGES.gif" width="50%"></h1>
 			<a href="holiday/christmas/christmas.html"><h2 class="aligncenter">The Christmas Page</h2></a>
 		</div>
