Added Scrambled info
Added content for Scrambled

--- a/index.html
+++ b/index.html
@@ -27,11 +27,13 @@
 		<div class="lowwidth" style="border:10px; border-style:outset; border-color:#ffff00; padding: 1em; background-color:white;"> 
 			<h2 class="aligncenter"><img src="images/welcome.gif" width="15%"></h2>
 			<p class="aligncenter"> This is a website where you can find a lot of my stuff.</p>
-			<h2 class="aligncenter">About Me</h2>
+			<h2 font-family:courier; class="aligncenter">About Me</h2>
 			<p class="aligncenter">
 				I am THE TetrisKid, known for many things. I like games such as "Deus Ex" and "Crash Bandicoot: The Huge Adventure." I also 
 				like movies such as "Scooby-Doo (2002)" and "Scooby-Doo 2: Monsters Unleashed." I also like bands such as "They Might Be Giants" and
 				"Lemon Demon." Please explore the site! There might be easter eggs (there might not be also).<br><br>
+				Please check out my mashup album, "Scrambled" by clicking below.<br><br>
+				<a href="other/scrambled.html"><img src="images/click.gif"></a><br><br><br>
 				<img src="images/netscape.gif"><img src="images/internetexplorer.gif"><br><br>
 				<img src="images/usa.gif"><br><br>
 			</p>
