Added Halloween page
Happy Halloween!

--- a/index.html
+++ b/index.html
@@ -34,11 +34,13 @@
 				"Lemon Demon." Please explore the site! There might be easter eggs (there might not be also).<br><br>
 				Please check out my mashup album, "Scrambled" by clicking below.<br><br>
 				<a href="other/scrambled.html"><img src="images/click.gif"></a><br><br><br>
-				<img src="images/netscape.gif"><img src="images/internetexplorer.gif"><br><br>
-				<img src="images/usa.gif"><br><br>
-			</p>
-			<p class="aligncenter">
-				There is currently no featured holiday page. View the past holiday pages <a href="other.html#holiday_pages">here.</a>
+				
+				Check out the Halloween page by clicking the image below! <br>
+				<a href="holiday/halloween/halloween.html"><img src="holiday/halloween/halloween.gif" width="20%"></a><br><br>
+				View other holiday pages <a href="other.html#holiday_pages">here.</a> <br><br>
+				
+				<img src="images/netscape.gif"><img src="images/internetexplorer.gif"><br>
+				<img src="images/usa.gif"><br>
 			</p>
 			<p class="aligncenter">
 				<img src="images/blinkiezone.gif"><br>
