--- a/other.html
+++ b/other.html
@@ -39,6 +39,7 @@
 			<br><br><br>
 			<h1 class="aligncenter"><img id="holiday_pages" src="images/HOLIDAY_PAGES.gif" width="50%"></h1>
 			<a href="holiday/christmas/christmas.html"><h2 class="aligncenter">The Christmas Page</h2></a>
+			<a href="holiday/halloween/halloween.html"><h2 class="aligncenter">The Halloween Page</h2></a>
 		</div>
 	</body>
 </html>
