--- a/links.html
+++ b/links.html
@@ -27,7 +27,7 @@
 		<div class="lowwidth" style="border:10px; border-style:outset; border-color:#ffff00; padding: 1em; background-color:white;">
 			<h2 class="aligncenter"> I am everywhere! </h2>
 			<p class="aligncenter"> 
-				<a href="https://www.youtube.com/channel/UCqL-qPWP3AVjN5O7PY5hW8g" target="_blank"><img src="images/youtube.gif"></a><br><br>
+				<a href="https://www.youtube.com/channel/UCqL-qPWP3AVjN5O7PY5hW8g" target="_blank"><img src="images/youtube.gif" width="200"></a><br><br>
 				<a href="https://tetriskid48.newgrounds.com/" target="_blank"><img src="images/ng.gif"></a><br><br>
 				<a href="https://discord.gg/YYbxQ8J" target="_blank">Discord Server</a><br>
 				<a href="https://www.speedrun.com/user/TetrisKid48" target="_blank">Speedrun.com Profile</a><br>
