added art from 2021

--- a/images.html
+++ b/images.html
@@ -31,10 +31,17 @@
 				<a href="https://grimacefans.weebly.com/forums.html#!/@grimacekid48" target="_blank"><img src="images/grimacekid.png" alt="grimacekid48" width="256" height="256"></a>
 				<img src="images/cloudsword.png" alt="Cloud's Sword" width="256" height="256">
 			</p>
+			
 			<br>
 			<p class="aligncenter">
 				<img src="images/farm.png" alt="Farm (ASCII Art)" width="396" height="396"><br>
 				"Farm" ASCII Art (May 1st, 2022)
+			</p>
+			<br>
+			<p class="aligncenter">
+				<img src="images/tmbg_art_2021.png" alt="TMBG Pixel Art" width="256"><br>
+				They Might Be Giants Pixel Art (Sometime in Spring of 2021)<br>
+				Based off the "The Statue Got Me High" music video.
 			</p>
 			<br>
 			<h2 class="aligncenter">Memes</h2>
