--- a/links.html
+++ b/links.html
@@ -46,6 +46,9 @@
 			<h2 class="aligncenter"> I am everywhen! </h2>
 			<h2 class="aligncenter"><img src="images/computer-surfing.gif" height="100"></h2>
 			<br><br><br>
+			<p class="aligncenter">
+				Frankfurter Medium font can be found <a href="https://fontmeme.com/fonts/opti-frankfurter-medium-font/" target="_blank">here.</a>
+			</p>
 			<p class="aligncenter"> 
 				All favicons on this site are from <a href="https://win98icons.alexmeub.com" target="_blank">Windows 98 Icon Viewer</a>
 			</p>
