--- a/other/scrambled.html
+++ b/other/scrambled.html
@@ -26,10 +26,10 @@
 		<br>
 		<div class="lowwidth" style="border:10px; border-style:outset; border-color:#ffff00; padding: 1em; background-color:white;">
 			<h1 style="font-family:courier;" class="aligncenter"> Scrambled </h1>
-			<h2 class="aligncenter"> A MASHUP ALBUM FROM THE MIND THAT MADE SOME OTHER STUFF ALSO</h1>
+			<h2 class="aligncenter"> A MASHUP ALBUM FROM THE MIND THAT MADE <a href="crushed.html">SOME OTHER STUFF ALSO</a></h1>
 			<div class="aligncenter"><img src="../images/scrambled.png" width="400"></div>
 			<h2 class="aligncenter"><a href="Elias - Scrambled.zip" download>Click here to download the MP3s (and the gifs) in a ZIPPED file!</a></h2>
-			<h2 class="aligncenter"><a href="https://youtu.be/UYfnlJgWfh0">OR click HERE to listen to it on YouTube NOW!</a></h2>
+			<h2 class="aligncenter"><a href="https://youtu.be/UYfnlJgWfh0" target="_blank">OR click HERE to listen to it on YouTube NOW!</a></h2>
 			<h2 style="font-family:courier;" class="aligncenter">
 				15 tracks.<br>
 				15 gifs.<br>
@@ -42,6 +42,5 @@
 				WILL make you cry.
 			</h2>
 			<p class="aligncenter">(Note: I did not make any of the gifs nor the source material.)<p>
-		</div>
 	</body>
 </html>
