--- a/sounds.html
+++ b/sounds.html
@@ -27,8 +27,8 @@
 		<div class="lowwidth" style="border:10px; border-style:outset; border-color:#ffff00; padding: 1em; background-color:white;">
 			<p class="aligncenter"><img src="images/listen-now.gif"></p>
 			<div class="aligncenter">
-				<h2 style="font-family:courier;">Click on the album art below for more info on "Scrambled", my mashup album!</h2>
-				<a href="other/scrambled.html"><img src="images/scrambled.png" width="250"></a>
+				<h2 style="font-family:courier;">Click on one of the album arts below for more info on my 2 mashup albums, Scrambled and Crushed!</h2>
+				<a href="other/scrambled.html"><img src="images/scrambled.png" width="250"></a>   <a href="other/crushed.html"><img src="images/crushed.png" width="250"></a>
 				<br><br>
 			</div>
 			<h2 class="aligncenter">Some MIDI songs for you!</h2>
