--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 			<p class="aligncenter"> This is a website where you can find a lot of my stuff.</p>
 			<h1 font-family:courier; class="aligncenter">About Me</h1>
 			<p class="aligncenter">
-				I am THE TetrisKid, known for many things, things which i made on my computer.<br>I like video games such as "Deus Ex", "Super Smash Brothers Melee", "Fallout: New Vegas", and "Crash Bandicoot: The Huge Adventure."<br>
-				I also like movies such as "Scooby-Doo (2002)" and "Scooby-Doo 2: Monsters Unleashed."<br> I also like bands such as "Talking Heads", "They Might Be Giants", and
+				I am THE TetrisKid, known for many things, things which I made on my computer.<br>I like video games such as "Deus Ex", "Super Smash Brothers Melee", and "Fallout: New Vegas"<br>
+				I also like movies such as "Dawn Of The Dead (1978)" and "Scooby-Doo 2: Monsters Unleashed."<br> I also like bands such as "They Might Be Giants", "Talking Heads", and
 				"Lemon Demon."<br> Please explore the site! There might be easter eggs (there might not be also).<br><br><br>
 				Please check out my 2ND mashup album, "Crushed!" by clicking below.<br><br>
 				<a href="other/crushed.html"><img src="images/click.gif"></a><br><br><br>
@@ -43,6 +43,7 @@
 				<img src="images/mobile.gif"><img src="images/good-vibes.gif"><img src="images/scoobydoo.gif">
 				<img src="images/blinkiemario.gif"><img src="images/jesusblinkie.gif"><img src="images/blinkiemyspace.gif">
 				<img src="images/blinkiepepsi.gif"><img src="images/spongebobsquarepants.gif"><img src="images/ethelsblinkie.gif">
+				<img src="images/vm_banner.gif"><img src="images/spindash_silence.gif"><img src="images/4-A18.gif">
 			</p>
 		</div>
 	</body>
