--- a/links.html
+++ b/links.html
@@ -27,8 +27,8 @@
 		<div class="lowwidth" style="border:10px; border-style:outset; border-color:#ffff00; padding: 1em; background-color:white;">
 			<h2 class="aligncenter"> I am everywhere! </h2>
 			<p class="aligncenter"> 
-				<a href="https://www.youtube.com/channel/UCqL-qPWP3AVjN5O7PY5hW8g" target="_blank"><img src="images/youtube.gif" width="200"></a><br><br>
-				<a href="https://tetriskid48.newgrounds.com/" target="_blank"><img src="images/ng.gif"></a><br><br>
+				<a href="https://www.youtube.com/channel/UCqL-qPWP3AVjN5O7PY5hW8g" target="_blank">YouTube Channel<br><img src="images/youtube.gif" width="200"></a><br><br>
+				<a href="https://tetriskid48.newgrounds.com/" target="_blank">Newgrounds Profile<br><img src="images/ng.gif"></a><br><br>
 				<a href="https://discord.gg/YYbxQ8J" target="_blank">Discord Server</a><br>
 				<a href="https://www.speedrun.com/user/TetrisKid48" target="_blank">Speedrun.com Profile</a><br>
 				<a href="https://github.com/TetrisKid48" target="_blank">GitHub profile</a><br>
@@ -38,8 +38,6 @@
 				<a href="https://www.last.fm/user/TetrisKid" target="_blank">last.fm profile</a><br>
 				<a href="https://soundcloud.com/tetriskid48" target="_blank">SoundCloud</a><br>
 				<a href="https://gamejolt.com/@TetrisKid48" target="_blank">Game Jolt profile</a><br>
-				<a href="https://gbatemp.net/members/tetriskid48.512539/" target="_blank">GBAtemp profile</a><br>
-				<a href="https://jstris.jezevec10.com/u/KidPix48" target="_blank">Jstris profile</a><br>
 				<a href="https://scratch.mit.edu/users/TetrisKid48/" target="_blank">Scratch profile</a><br>
 				<a href="https://grimacefans.weebly.com/forums.html#!/@grimacekid48" target="_blank">Grimace Forum profile</a><br>
 			</p>
@@ -53,7 +51,8 @@
 				All favicons on this site are from <a href="https://win98icons.alexmeub.com" target="_blank">Windows 98 Icon Viewer</a>
 			</p>
 			<p class="aligncenter"> 
-				All gifs on this site are from <a href="https://www.gifcities.org" target="_blank">GifCities.org</a><br><br>
+				All gifs on this site are from <a href="https://www.gifcities.org" target="_blank">GifCities.org</a><br>
+				Except for some blinkies from:<br><a href="https://bluef00t.neocities.org" target="_blank"><img src="images/bluef00t_button.gif"></a><br><br>
 				<img src="images/WindowsExperience.gif"><br>
 				<img src="images/WindowsXPSale.gif"><img src="images/WindowsXPSpanish.gif">
 			</p>
