Added SF3 PalMods
yeah. that

--- a/other.html
+++ b/other.html
@@ -25,16 +25,22 @@
 		</div>
 		<br>
 		<div class="lowwidth" style="border:10px; border-style:outset; border-color:#ffff00; padding: 1em; background-color:white;">
+			<h2 class="aligncenter"><a href="other/setup.html">My PC Setup!!!</a> Components and stuff!!!!</h2>
+			<p class="aligncenter">
+				<a href="other/setup.html">This page</a> 
+				shows all the stuff in my computer. So you can know what is in my computer.
+			</p>
+			<h2 class="aligncenter"><a href="other/sf3-palmods.html">Street Fighter III 3rd Strike Custom PalMods</a></h2>
+			<p class="aligncenter">
+				<a href="other/sf3-palmods.html">This page</a> 
+				has custom costumes I made for 3rd Strike. You'll need PalMod to patch them into your ROM.
+			</p>
+			<br><br><br>
 			<h1 class="aligncenter"><img src="images/Documents.gif" width="150"></h1>
 			<h2 class="aligncenter">The Scooby-Doo 1 & 2 Merch Catalog</h2>
 			<p class="aligncenter">
 				The <a href="https://docs.google.com/document/d/1urqPy3YLN4mnBJYlkbIlv7fWjW5pRj_U6q1UaoQvARg/edit?usp=sharing" target="_blank">Scooby-Doo 1 & 2 Merch Catalog</a> 
 				is a list of all merchandise I can find for the James Gunn Scooby-Doo movies. There's tons of WACKY things in there! Please comment any additions.
-			</p>
-			<h2 class="aligncenter"><a href="other/setup.html">My PC Setup!!!</a> Components and stuff!!!!</h2>
-			<p class="aligncenter">
-				<a href="other/setup.html">This page</a> 
-				shows all the stuff in my computer. So you can know what is in my computer.
 			</p>
 			<br><br><br>
 			<h1 class="aligncenter"><img id="holiday_pages" src="images/HOLIDAY_PAGES.gif" width="50%"></h1>
