--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 			<p class="aligncenter"> This is a website where you can find a lot of my stuff.</p>
 			<h1 font-family:courier; class="aligncenter">About Me</h1>
 			<p class="aligncenter">
-				I am THE TetrisKid, known for many things, things which I made on my computer.<br>I like video games such as "Deus Ex", "Super Smash Brothers Melee", and "Fallout: New Vegas"<br>
+				I am THE TetrisKid, known for many things, things which I made on my computer.<br>I like video games such as "Deus Ex", "Doom 2", and "Fallout: New Vegas"<br>
 				I also like movies such as "Dawn Of The Dead (1978)" and "Scooby-Doo 2: Monsters Unleashed."<br> I also like bands such as "They Might Be Giants", "Talking Heads", and
 				"Lemon Demon."<br> Please explore the site! There might be easter eggs (there might not be also).<br><br><br>
 				Please check out my 2ND mashup album, "Crushed!" by clicking below.<br><br>
