--- a/links.html
+++ b/links.html
@@ -30,10 +30,11 @@
 				<a href="https://www.youtube.com/channel/UCqL-qPWP3AVjN5O7PY5hW8g" target="_blank">YouTube Channel<br><img src="images/youtube.gif" width="200"></a><br><br>
 				<a href="https://tetriskid48.newgrounds.com/" target="_blank">Newgrounds Profile<br><img src="images/ng.gif"></a><br><br>
 				<a href="https://discord.gg/YYbxQ8J" target="_blank">Discord Server</a><br>
+				<a href="https://www.twitch.tv/tetriskid48" target="_blank">Twitch Channel</a><br>
+				<a href="https://bsky.app/profile/tetriskid.bsky.social" target="_blank">Bluesky Profile</a><br>
 				<a href="https://www.speedrun.com/user/TetrisKid48" target="_blank">Speedrun.com Profile</a><br>
 				<a href="https://github.com/TetrisKid48" target="_blank">GitHub profile</a><br>
 				<a href="https://tetriskid48.itch.io/" target="_blank">itch.io profile</a><br>				
-				<a href="https://www.twitch.tv/tetriskid48" target="_blank">Twitch Channel</a><br>
 				<a href="https://www.reddit.com/user/TetrisKid48" target="_blank">reddit profile</a><br>
 				<a href="https://www.last.fm/user/TetrisKid" target="_blank">last.fm profile</a><br>
 				<a href="https://soundcloud.com/tetriskid48" target="_blank">SoundCloud</a><br>
