--- a/other/setup.html
+++ b/other/setup.html
@@ -48,7 +48,7 @@
 				<tr>
 					<td><a href="https://www.microsoft.com/en-us/evalcenter/download-windows-10-enterprise" target="_blank"><img src="parts/windows10enterprise.png" width="250"></a>
 						<br>OS: Windows 10 Enterprise LTSC<br><br><br></td>
-					<td><a href="https://us.aoc.com/en-US/gaming/products/monitor/g2490vx/specification" target="_blank"><img src="parts/aocg2490vx.jpg" width="250"></a>
+					<td><a href="https://aoc.com/us/gaming/products/monitors/g2490vx" target="_blank"><img src="parts/aocg2490vx.jpg" width="250"></a>
 						<br>Monitor: AOC G2490VX 24" (1080p)<br><br><br></td>
 					<td><a href="https://hyperx.com/products/hyperx-solocast-usb-microphone?variant=41031679312029" target="_blank"><img src="parts/hyperxsolocast.jpg" width="250"></a>
 						<br>Microphone: HyperX SoloCast<br><br><br></td>
