--- a/links.html
+++ b/links.html
@@ -37,9 +37,10 @@
 				<a href="https://tetriskid48.itch.io/" target="_blank">itch.io profile</a><br>				
 				<a href="https://www.reddit.com/user/TetrisKid48" target="_blank">reddit profile</a><br>
 				<a href="https://www.last.fm/user/TetrisKid" target="_blank">last.fm profile</a><br>
-				<a href="https://soundcloud.com/tetriskid48" target="_blank">SoundCloud</a><br>
+				<a href="https://soundcloud.com/tetriskid48" target="_blank">SoundCloud profile</a><br>
 				<a href="https://gamejolt.com/@TetrisKid48" target="_blank">Game Jolt profile</a><br>
 				<a href="https://scratch.mit.edu/users/TetrisKid48/" target="_blank">Scratch profile</a><br>
+				<a href="https://fallout.wiki/wiki/User:TetrisKid" target="_blank">Independent Fallout Wiki user page</a><br>
 				<a href="https://grimacefans.weebly.com/forums.html#!/@grimacekid48" target="_blank">Grimace Forum profile</a><br>
 			</p>
 			<h2 class="aligncenter"> I am everywhen! </h2>
