--- a/other/setup.html
+++ b/other/setup.html
@@ -26,7 +26,7 @@
 		<br>
 		<div class="lowwidth" style="border:10px; border-style:outset; border-color:#ffff00; padding: 1em; background-color:purple;">
 			<h1 style="font-family:courier;" class="aligncenter"> TetrisKid's PC Setup </h1>
-			<h2 style="font-family:courier;" class="aligncenter"> click on the images to go to the manufacturer's site </h2>
+			<h2 style="font-family:courier;" class="aligncenter"> click on the images for more info </h2>
 			<table class="aligncenter" style="border:5px; border-style:outset; border-color:#808080; padding: 1em; font-family:courier; background-color:white;">
 				<tr>
 					<td><a href="https://www.bitfenix.com/products/chassis-2/atx/nova-mesh-se/" target="_blank"><img src="parts/novemeshse.png" width="250"></a>
@@ -40,8 +40,8 @@
 				<tr>
 					<td><a href="https://www.amd.com/en/products/cpu/amd-ryzen-5-5500" target="_blank"><img src="parts/amdryzen5500.jpg" width="250"></a>
 						<br>CPU: AMD Ryzen 5 5500 (6 core, 12 threads)<br><br><br></td>
-					<td><a href="https://www.oloymemory.com/warhawk/" target="_blank"><img src="parts/oloyram.jpg" width="250"></a>
-						<br>RAM: OLOy DDR4 RAM 2x8GB Warhawk Aura Sync RGB<br><br><br></td>
+					<td><a href="https://keeb-finder.com/keyboards/varmilo-vpm87-cmyk" target="_blank"><img src="parts/keyboard.jpg" width="250"></a>
+						<br>Keyboard: Varmilo VPM87 CMYK TKL White LED EC Keyboard (w/ Sakura V2 Switches)<br><br><br></td>
 					<td><a href="https://www.raidmax.com/xt-series" target="_blank"><img src="parts/rx400xt.jpeg" width="250"></a>
 						<br>Power Supply: RAIDMAX RX-400XT (400W)<br><br><br></td>
 				</tr>
