--- a/other/sf3-palmods.html
+++ b/other/sf3-palmods.html
@@ -2,7 +2,7 @@
 	<head>
 		<title>TetrisKid's PC Setup</title>
 		<link rel="stylesheet" href="../styles.css">
-		<link rel="icon" type="image/x-icon" href="../icons/setup.ico">
+		<link rel="icon" type="image/x-icon" href="../icons/palmods.ico">
 	</head>
 	<body style="background-image: url('../images/space.gif')">
 		<div class="sidenavL">
@@ -31,6 +31,8 @@
 				<img src="palmods/ibuki-purple.png">
 				<br><br>
 				<img src="palmods/remy-purple.png">
+				<br><br>
+				<img src="palmods/alex-purple.png">
 				<br><br>
 			</div>
 		</div>
