--- a/other/crushed.html
+++ b/other/crushed.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>Scrambled - Mashup Album</title>
+		<title>Crushed - Mashup Album</title>
 		<link rel="stylesheet" href="../styles.css">
 		<link rel="icon" type="image/x-icon" href="../icons/scrambled.ico">
 	</head>
